# OctaSine

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  TODO.md  about.hbs  about.toml  deny.toml
bench_process/: Cargo.toml
bench_process/src/: main.rs
octasine/: Cargo.toml  build.rs
octasine-cli/: Cargo.toml
octasine-cli/src/: bench_process.rs  main.rs  plot.rs
octasine-vst2-plugin/: Cargo.toml
octasine-vst2-plugin/src/: lib.rs
octasine/benches/: bench-simd.rs  patch_bank_serde.rs  process.rs  sample-gen.rs  sin.rs
octasine/presets/: preset-bank.json  test-preset-bank-format-1.json  test-preset-bank-format-2.json
octasine/scripts/: build-and-install.sh  build-simd-and-install.sh
octasine/src/: common.rs  constants.rs  gen.rs  lib.rs  math.rs  settings.rs  simd.rs  utils.rs  voices.rs
octasine/src/approximations/: envelope_curve_table.rs  log10_table.rs  mod.rs
octasine/src/audio/: common.rs  interpolation.rs  math.rs  mod.rs
octasine/src/audio/parameters/: common.rs  frequency_free.rs  interpolatable_value.rs  lfo_active.rs  lfo_amount.rs  lfo_frequency_free.rs  lfo_target.rs  master_frequency.rs  master_pitch_bend_range.rs  master_volume.rs  mod.rs  operator_active.rs  operator_envelope_volume.rs  operator_frequency_fine.rs  operator_frequency_free.rs  operator_mix.rs  operator_mod_target.rs  operator_panning.rs  operator_sustain_volume.rs  operator_volume.rs  parameters.rs
octasine/src/audio/voices/: envelopes.rs  lfos.rs  log10_table.rs  mod.rs
octasine/src/gui/: boolean_button.rs  bridge.rs  common.rs  corner.rs  interface.rs  knob.rs  lfo.rs  lfo_target_picker.rs  mod.rs  mod_target_picker.rs  operator.rs  patch_picker.rs  value_text.rs  wave_picker.rs
octasine/src/gui/envelope/: mod.rs
octasine/src/gui/interface/: boolean_button.rs  boolean_picker.rs  common.rs  corner.rs  divider.rs  envelope.rs  knob.rs  lfo.rs  lfo_shape_picker.rs  lfo_target_picker.rs  mod.rs  mod_matrix.rs  mod_target_picker.rs  mute_button.rs  operator.rs  patch_picker.rs  picker.rs  preset_picker.rs  presets.rs  routing.rs  style.rs  value_text.rs  wave_display.rs  wave_picker.rs  widgets.rs
octasine/src/gui/knob/: mod.rs  plain.rs
octasine/src/gui/knob2/: mod.rs
octasine/src/gui/mod_matrix/: common.rs  mix_line.rs  mod.rs  mod_box.rs  mod_lines.rs  operator_box.rs  output_box.rs
octasine/src/gui/style/: application.rs  boolean_button.rs  button.rs  card.rs  checkbox.rs  container.rs  envelope.rs  knob.rs  knob2.rs  macros.rs  menu.rs  mod.rs  mod_matrix.rs  modal.rs  pick_list.rs  scrollable.rs  text_input.rs  wave_display.rs  wave_picker.rs
octasine/src/gui/wave_display/: gen.rs  mod.rs
octasine/src/math/: bhaskara.rs  mod.rs  wave.rs
octasine/src/parameter_values/: lfo_amount.rs  lfo_bpm_sync.rs  lfo_frequency_free.rs  lfo_frequency_ratio.rs  lfo_mode.rs  lfo_shape.rs  lfo_target.rs  master_frequency.rs  master_volume.rs  mod.rs  operator_active.rs  operator_envelope.rs  operator_feedback.rs  operator_frequency_fine.rs  operator_frequency_free.rs  operator_frequency_ratio.rs  operator_mix_out.rs  operator_mod_out.rs  operator_mod_target.rs  operator_panning.rs  operator_volume.rs  operator_wave_type.rs  utils.rs
octasine/src/parameters/: glide_active.rs  glide_bpm_sync.rs  glide_mode.rs  glide_retrigger.rs  glide_time.rs  lfo_active.rs  lfo_amount.rs  lfo_bpm_sync.rs  lfo_frequency_free.rs  lfo_frequency_ratio.rs  lfo_key_sync.rs  lfo_mode.rs  lfo_shape.rs  lfo_target.rs  list.rs  master_frequency.rs  master_pitch_bend_range.rs  master_velocity_sensitivity.rs  master_volume.rs  mod.rs  num_voices.rs  operator_active.rs  operator_envelope.rs  operator_feedback.rs  operator_frequency_fine.rs  operator_frequency_free.rs  operator_frequency_ratio.rs  operator_mix_out.rs  operator_mod_out.rs  operator_mod_target.rs  operator_panning.rs  operator_velocity_sensitivity.rs  operator_volume.rs  operator_wave_type.rs  portamento_mode.rs  portamento_time.rs  preset.rs  sync.rs  utils.rs  values.rs  (+2 more)
octasine/src/parameters/preset/: mod.rs
octasine/src/parameters/processing/: interpolatable_value.rs  mod.rs  parameters.rs  utils.rs  values.rs
octasine/src/parameters/values/: lfo_amount.rs  lfo_bpm_sync.rs  lfo_frequency_free.rs  lfo_frequency_ratio.rs  lfo_mode.rs  lfo_shape.rs  lfo_target.rs  master_frequency.rs  master_volume.rs  mod.rs  operator_active.rs  operator_envelope.rs  operator_feedback.rs  operator_frequency_fine.rs  operator_frequency_free.rs  operator_frequency_ratio.rs  operator_mix_out.rs  operator_mod_out.rs  operator_mod_target.rs  operator_panning.rs  operator_volume.rs  operator_wave_type.rs
octasine/src/plugin/: common.rs  mod.rs
octasine/src/plugin/clap/: descriptor.rs  factory.rs  mod.rs  plugin.rs  sync.rs
octasine/src/plugin/vst2/: editor.rs  mod.rs  sync.rs
octasine/src/preset_bank/: atomic_double.rs  change_info.rs  import_export.rs  import_export_utils.rs  mod.rs
octasine/src/preset_bank/utils/: mod.rs
octasine/src/preset_parameters/: mod.rs  parameters.rs
octasine/src/presets/: change_info.rs  mod.rs  parameters.rs  values.rs
octasine/src/presets/parameters/: atomic_double.rs  atomic_float.rs  (+3 more)
octasine/src/processing_parameters/: common.rs  mod.rs  parameters.rs  utils.rs
octasine/src/simd/: avx.rs  fallback.rs  mod.rs  sse2.rs
octasine/src/sync/: atomic_double.rs  atomic_float.rs  change_info.rs  compat.rs  mod.rs  parameters.rs  patch_bank.rs  serde.rs
octasine/src/voices/: envelopes.rs  lfos.rs  lfos2.rs  mod.rs
octasine_cli/: Cargo.toml
octasine_cli/src/: main.rs
octasine_vst/: Cargo.toml
octasine_vst/src/: lib.rs
octasine_vst2_plugin/: Cargo.toml
octasine_vst2_plugin/src/: lib.rs
run_gui/: Cargo.toml
run_gui/src/: main.rs
simd_sleef_sin35/: Cargo.toml  LICENSE-MIT
simd_sleef_sin35/src/: lib.rs
vst2_helpers/: Cargo.toml
vst2_helpers/src/: lib.rs
vst2_helpers/src/approximations/: log10_table.rs
vst2_helpers/src/presets/: change_info.rs  mod.rs  parameters.rs  serde_utils.rs
vst2_helpers/src/processing_parameters/: interpolatable_value.rs  mod.rs  utils.rs
(+156 files in other folders)
