[workspace]
resolver = "2"

members = [ 
    "octasine",
    "octasine-cli",
    "octasine-vst2-plugin",
]

# [patch.'https://github.com/RustAudio/baseview']
# baseview = { path = "../baseview" }

# [patch.'https://github.com/BillyDM/iced_baseview']
# iced_baseview = { path = "../iced_baseview" }

# [patch.crates-io]
# iced_audio = { path = "../fengalin/iced_audio" }

# [patch.'https://github.com/iced-rs/iced_audio']
# iced_audio = { path = "../iced_audio" }

# [patch.'https://github.com/greatest-ape/sleef-trig']
# sleef-trig = { path = "../sleef-trig" }

[patch.crates-io]
iced_core = { git = "https://github.com/bungoboingo/iced.git", branch = "feat/background-gradients" }
iced_futures = { git = "https://github.com/bungoboingo/iced.git", branch = "feat/background-gradients" }
iced_glow = { git = "https://github.com/bungoboingo/iced.git", branch = "feat/background-gradients" }
iced_graphics = { git = "https://github.com/bungoboingo/iced.git", branch = "feat/background-gradients" }
iced_native = { git = "https://github.com/bungoboingo/iced.git", branch = "feat/background-gradients" }
iced_style = { git = "https://github.com/bungoboingo/iced.git", branch = "feat/background-gradients" }
iced_wgpu = { git = "https://github.com/bungoboingo/iced.git", branch = "feat/background-gradients" }

[profile.release]
debug = false
lto = "thin"
opt-level = 3

[profile.test]
opt-level = 3

[profile.bench]
inherits = "release"

[profile.release-debug]
inherits = "release"
debug = true

[profile.release.package.sleef-trig]
codegen-units = 1

[profile.release-debug.package.sleef-trig]
codegen-units = 1