[workspace]
resolver = "2"

members = [ 
    "octasine",
    "octasine-cli",
    "xtask"
]

# [patch.'https://github.com/RustAudio/baseview']
# baseview = { path = "../baseview" }

# [patch.'https://github.com/BillyDM/iced_baseview']
# iced_baseview = { path = "../iced_baseview" }

# [patch.'https://github.com/iced-rs/iced_audio']
# [patch.crates-io]
# iced_audio = { path = "../iced_audio" }

# [patch.'https://github.com/greatest-ape/sleef-trig']
# sleef-trig = { path = "../sleef-trig" }

[patch.crates-io]
iced_core = { git = "https://github.com/greatest-ape/iced.git", rev = "f318e3f" }
iced_futures = { git = "https://github.com/greatest-ape/iced.git", rev = "f318e3f" }
iced_glow = { git = "https://github.com/greatest-ape/iced.git", rev = "f318e3f" }
iced_graphics = { git = "https://github.com/greatest-ape/iced.git", rev = "f318e3f" }
iced_native = { git = "https://github.com/greatest-ape/iced.git", rev = "f318e3f" }

[profile.release]
debug = false
lto = "thin"
opt-level = 3

[profile.test]
opt-level = 3

[profile.bench]
inherits = "release"

[profile.release-debug]
inherits = "release"
debug = true

[profile.release.package.sleef-trig]
codegen-units = 1

[profile.release-debug.package.sleef-trig]
codegen-units = 1