[workspace]
resolver = "2"

members = [ 
    "octasine",
    "octasine-cli",
    "xtask"
]

# [patch.'https://github.com/RustAudio/baseview']
# baseview = { path = "../baseview" }

# [patch.'https://github.com/BillyDM/iced_baseview']
# iced_baseview = { path = "../iced_baseview" }

# [patch.'https://github.com/iced-rs/iced_audio']
# [patch.crates-io]
# iced_audio = { path = "../iced_audio" }

# [patch.'https://github.com/greatest-ape/sleef-trig']
# sleef-trig = { path = "../sleef-trig" }

# Same as original repo, but forked for longevity
[patch.'https://github.com/nicokoch/reflink.git']
reflink = { git = "https://github.com/greatest-ape/reflink.git", rev = "e8d93b4" }

[profile.release]
debug = false
lto = "thin"
opt-level = 3

[profile.test]
opt-level = 3

[profile.release-debug]
inherits = "release"
debug = true

[profile.bench]
inherits = "release-debug"

[profile.release.package.sleef-trig]
codegen-units = 1

[profile.release-debug.package.sleef-trig]
codegen-units = 1