[package]
name = "octasine-cli"
version = "0.8.2"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
license = "AGPL-3.0"
edition = "2021"


[features]
default = ["wgpu"]
glow = ["octasine/glow", "simplelog"]
plot = ["plotlib"]
wgpu = ["octasine/wgpu", "simplelog"]

[dependencies]
octasine = { path = "../octasine", version = "0.8.2", default-features = false, features = ["vst2"] }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
fastrand = "1"
serde = "1"
serde_json = "1"
sha2 = "0.10"
vst = "0.3.0"

# run-gui
simplelog = { version = "0.12", default-features = false, features = ["local-offset"], optional = true }

# plot
plotlib = { version = "0.5", optional = true }