[package]
name = "octasine"
version = "0.8.1"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
license = "AGPL-3.0"
edition = "2021"

[features]
default = ["gui_glow"]
gui_glow = ["gui", "iced_baseview/glow", "iced_audio/glow"]
gui_wgpu = ["gui", "iced_baseview/wgpu", "iced_audio/wgpu"]
gui = ["iced_baseview/canvas", "iced_audio", "palette", "raw-window-handle", "rfd", "tinyfiledialogs"]

[lib]
name = "octasine"

[dev-dependencies]
assert_approx_eq = "1"
quickcheck = { version = "1", default-features = false }

[dependencies]
anyhow = "1"
arc-swap = "1"
array-init = "2"
arrayvec = "0.7"
byteorder = "1"
cfg-if = "1"
directories = "4"
duplicate = "0.4"
fast-math = "0.1"
fastrand = "1"
flate2 = "1"
git-testament = "0.2"
log = { version = "0.4", default-features = false }
log-panics = "2"
once_cell = "1"
os_info = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = { version = "0.12", default-features = false, features = ["local-offset"] }
sleef-trig = "0.1.0"
vst = "0.3"

# GUI

palette = { version = "0.6", optional = true }
raw-window-handle = { version = "0.4", optional = true }
rfd = { version = "0.10", optional = true, default-features = false, features = ["xdg-portal"] }
tinyfiledialogs = { version = "3", optional = true }

[dependencies.iced_audio]
git = "https://github.com/iced-rs/iced_audio"
rev = "03ff8e9"
default-features = false
optional = true

[dependencies.iced_baseview]
git = "https://github.com/BillyDM/iced_baseview.git"
rev = "e29fd62"
default-features = false
features = ["canvas"]
optional = true
