[package]
name = "octasine"
version = "0.8.3"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
license = "AGPL-3.0"
edition = "2021"

[features]
default = ["clap", "vst2", "glow"]
# Enable clap plugin support
clap = ["atomic_refcell", "bytemuck", "clap-sys", "parking_lot"]
# Enable VST2 plugin support
vst2 = ["vst"]
# Use glow (OpenGL) for graphics
glow = ["gui", "iced_baseview/glow", "iced_audio/glow"]
# Use wgpu for graphics
wgpu = ["gui", "iced_baseview/wgpu", "iced_audio/wgpu"]
# Internal use only
gui = ["iced_baseview/canvas", "iced_audio", "palette", "raw-window-handle", "rfd", "tinyfiledialogs"]

[lib]
name = "octasine"
crate-type = ["cdylib", "lib"]

[dev-dependencies]
assert_approx_eq = "1"
quickcheck = { version = "1", default-features = false }

[dependencies]
ahash = "0.8"
anyhow = "1"
arc-swap = "1"
array-init = "2"
arrayvec = "0.7"
byteorder = "1"
cfg-if = "1"
directories = "4"
duplicate = "0.4"
fast-math = "0.1"
fastrand = "1"
flate2 = "1"
git-testament = "0.2"
indexmap = "1"
log = { version = "0.4", default-features = false }
log-panics = "2"
once_cell = "1"
os_info = "3"
ringbuf = "0.3"
seahash = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = { version = "0.12", default-features = false, features = ["local-offset"] }
sleef-trig = "0.1.0"

# vst2

vst = { version = "0.3", optional = true }

# clap

atomic_refcell = { version = "0.1", optional = true }
bytemuck = { version = "1", optional = true }
clap-sys = { version = "0.3", optional = true }
parking_lot = { version = "0.12", optional = true }

# GUI

iced_audio = { version = "0.11", default-features = false, optional = true }
palette = { version = "0.6", optional = true }
raw-window-handle = { version = "0.4", optional = true }
rfd = { version = "0.10", optional = true, default-features = false, features = ["xdg-portal"] }
tinyfiledialogs = { version = "3", optional = true }

[dependencies.iced_baseview]
git = "https://github.com/BillyDM/iced_baseview.git"
rev = "e2dac0b"
default-features = false
features = ["canvas"]
optional = true
