[package]
name = "octasine_cli"
version = "0.6.1"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
license = "AGPL-3.0"
edition = "2021"

[dependencies]
octasine = { path = "../octasine", default-features = false }

anyhow = "1"
clap = { version = "3", features = ["derive"] }
serde = "1"
serde_json = "1"