[package]
name = "octasine_cli"
version = "0.6.1"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
license = "AGPL-3.0"
edition = "2021"


[features]
default = ["glow"]
wgpu = ["octasine/gui_wgpu"]
glow = ["octasine/gui_glow"]

[dependencies]
octasine = { path = "../octasine", default-features = false }

anyhow = "1"
clap = { version = "3", features = ["derive"] }
serde = "1"
serde_json = "1"
simplelog = { version = "0.12", default-features = false, features = ["local-offset"] }
