[package]
name = "octasine_cli"
version = "0.6.1"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
license = "AGPL-3.0"
edition = "2021"


[features]
default = ["glow"]
bench = ["octasine/simd", "colored", "fastrand", "sha2", "vst"]
glow = ["octasine/gui_glow", "simplelog"]
plot = ["plotlib"]
wgpu = ["octasine/gui_wgpu", "simplelog"]

[dependencies]
octasine = { path = "../octasine", default-features = false }

anyhow = "1"
clap = { version = "3", features = ["derive"] }
serde = "1"
serde_json = "1"

# run-gui
simplelog = { version = "0.12", default-features = false, features = ["local-offset"], optional = true }

# bench
colored = { version = "2", optional = true }
fastrand = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }
vst = { version = "0.3.0", optional = true }

# plot
plotlib = { version = "0.5", optional = true }