[package]
name = "octasine_vst"
version = "0.1.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2018"

[lib]
name = "octasine"
crate-type = ["cdylib"]

[dependencies.vst]
git = "https://github.com/RustAudio/vst-rs.git"
rev = "269adb"

[dependencies.octasine]
path = "../octasine"

[features]
simd = ["octasine/simd"]
logging = ["octasine/logging"]