[package]
name = "octasine_vst"
version = "0.1.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

[lib]
name = "octasine"
crate-type = ["cdylib"]

[dependencies]
vst = "0.2"

[dependencies.octasine]
path = "../octasine"

[features]
simd2 = ["octasine/simd2"]
logging = ["octasine/logging"]