[package]
name = "octasine_vst2_plugin"
version = "0.5.2"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"

[lib]
name = "octasine"
crate-type = ["cdylib"]

[features]
simd = ["octasine/simd"]
gui_glow = ["octasine/gui_glow"]
gui_wgpu = ["octasine/gui_wgpu"]

[dependencies]
octasine = { path = "../octasine" }
vst = "0.2"