[package]
name = "octasine_vst2_plugin"
version = "0.5.3"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"

[lib]
name = "octasine"
crate-type = ["cdylib"]

[features]
default = ["wgpu"]
simd = ["octasine/simd"]
glow = ["octasine/gui_glow"]
wgpu = ["octasine/gui_wgpu"]

[dependencies]
octasine = { path = "../octasine", default-features = false }
vst = "0.2"
