[package]
name = "octasine_vst2_plugin"
version = "0.6.1"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
license = "AGPL-3.0"
edition = "2021"

[lib]
name = "octasine"
crate-type = ["cdylib"]

[features]
default = ["glow"]
simd = ["octasine/simd"]
glow = ["octasine/gui_glow"]
wgpu = ["octasine/gui_wgpu"]

[dependencies]
octasine = { path = "../octasine", default-features = false }
vst = { git = "https://github.com/RustAudio/vst-rs.git", rev = "b5f342c" }
