[package]
name = "run_gui"
version = "0.1.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
octasine = { path = "../octasine", features = ["gui"] }
simplelog = { version = "0.9", default-features = false }

[dependencies.baseview]
git = "https://github.com/rustaudio/baseview.git"
branch = "master"

[dependencies.iced_baseview]
git = "https://github.com/BillyDM/iced_baseview.git"
branch = "main"