[package]
name = "vst2_helpers"
version = "0.1.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "vst2_helpers"

[dependencies]
array-init = "0.1"
assert_approx_eq = "1"
parking_lot = "0.10"
rand = { version = "0.7", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = "1"

[dev-dependencies]
quickcheck = "0.9"
quickcheck_macros = "0.9"
statistical = "1"