[package]
name = "vst2_helpers"
version = "0.1.0"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
name = "vst2_helpers"

[dependencies]
arc-swap = "0.4"
array-init = "0.1"
fastrand = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_approx_eq = "1"
quickcheck = { version = "0.9", default-features = false }